- Fixed DBDL conversion function to sort by original Killer order. - Enabled GPU rendering for character selection portrait on Safari.

--- a/public/stylesheets/balance-checker.css
+++ b/public/stylesheets/balance-checker.css
@@ -40,7 +40,10 @@ body {
     filter: /*drop-shadow(0px 0px 8px #690069)*/ drop-shadow(1px 1px 0 #ffffff) 
     drop-shadow(-1px -1px 0 #ffffff)
     drop-shadow(0px 0px 5px #ffffff) !important;
+
+    -webkit-transform: translate3d(0, 0, 0); /* Hacky solution to enable GPU acceleration because Safari sucks */
 }
+
 .character-selected img {
     filter: drop-shadow(0px 0px 0 #ffffff00) grayscale(0%)
     drop-shadow(0px 0px 0 #ffffff00);
